# lumina

./: .gitignore  LICENSE  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/server/: Cargo.toml  Dockerfile  config.toml
apps/server/src/: app.rs  config.rs  error.rs  main.rs
apps/server/src/db/: mod.rs
apps/server/src/db/migrations/: 001_initial.sql
apps/server/src/middleware/: auth.rs
apps/server/src/models/: download.rs  file.rs  mod.rs  series.rs  setting.rs  user.rs
apps/server/src/modules/: mod.rs
apps/server/src/modules/auth/: handler.rs  service.rs
apps/server/src/modules/download/: aria2.rs  bittorrent.rs  client.rs  handler.rs  mod.rs  service.rs
apps/server/src/modules/files/: handler.rs  service.rs
apps/server/src/modules/stream/: handler.rs  service.rs
apps/server/src/modules/system/: handler.rs  service.rs
apps/shared/: package.json
apps/shared/src/: constants.ts  types.ts
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: App.js  App.tsx  main.js  main.tsx
apps/web/src/components/: FolderPicker.tsx  Layout.js  LoginPage.js  LoginPage.tsx  Sidebar.js  Sidebar.tsx
apps/web/src/hooks/: useAuth.js  useAuth.tsx  useFiles.js  useFiles.ts  useMedia.js  useMedia.ts
apps/web/src/lib/: api.js  api.ts
apps/web/src/pages/: Downloads.js  Downloads.tsx  FileBrowser.js  FileBrowser.tsx  MediaLibrary.js  MediaLibrary.tsx  PlayerPage.js  PlayerPage.tsx  Settings.js  Settings.tsx
