[package]
name = "lumina-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sysinfo = "0.38"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
mime_guess = "2"
toml = "1"
rand = "0.8"
md5 = "0.8"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-stream = "0.3"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
librqbit = "8.1.1"
url = "2"
urlencoding = "2"
